<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_animated_view_controller</name>
  <version>0.2.0</version>
  <description>A rviz view controller featuring smooth transitions.</description>
  <author email="adamleeper@gmail.com">Adam Leeper</author>
  <maintainer email="evanflynn.msu@gmail.com">Evan Flynn</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rviz_animated_view_controller</url>
  <url type="repository">https://github.com/ros-visualization/rviz_animated_view_controller</url>
  <url type="bugtracker">https://github.com/ros-visualization/rviz_animated_view_controller/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend condition="$ROS_DISTRO != noetic and $ROS_DISTRO != melodic and $ROS_DISTRO != kinetic">libqt4-dev</depend>
  <depend condition="$ROS_DISTRO == noetic or $ROS_DISTRO == melodic or $ROS_DISTRO == kinetic">qtbase5-dev</depend>

  <depend>opengl</depend>
  <depend>eigen</depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>cmake_modules</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>view_controller_msgs</depend>
  <depend>rviz</depend>
  <depend>pluginlib</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
